# ex4

./: .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .functions.c.swl  .functions.c.swm  .functions.c.swn  .functions.c.swo  .functions.c.swp  .functions.h.swk  .functions.h.swl  .functions.h.swm  .functions.h.swn  .functions.h.swo  .functions.h.swp  .main.c.swi  .main.c.swj  .main.c.swk  .main.c.swl  .main.c.swm  .main.c.swn  .main.c.swo  .main.c.swp  .swp  CMakeLists.txt  Standard document.tex  main.c  nohup.out
Code ex4/: functions.c  functions.h  main.c
rebuild/: CMakeCache.txt  Makefile  cmake_install.cmake
